# whisper-tui

./: README.md  pyproject.toml  whisper-tui
